--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     Frameworks like React.js and React Native. I also enjoy ui, ux and design in general.
                 </p>
                 <div class="btn-con">
-                    <a href="https://docs.google.com/document/d/1Gu2ungDiioO5iYUqKQy1gPsIU2iYIs29Uab30sEyfWU/edit?usp=sharing"
+                    <a href="https://docs.google.com/document/d/1dxJZuazprtqo4St1NRzEfs5RrpHv8qST/edit?usp=sharing&ouid=112001919012913141552&rtpof=true&sd=true"
                         class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
