--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                             </div>
                             <div class="submit-btn">
-                                <a href="https://docs.google.com/document/d/1Gu2ungDiioO5iYUqKQy1gPsIU2iYIs29Uab30sEyfWU/edit?usp=sharing"
+                                <a href="https://docs.google.com/document/d/1dxJZuazprtqo4St1NRzEfs5RrpHv8qST/edit?usp=sharing&ouid=112001919012913141552&rtpof=true&sd=true"
                                     class="main-btn">
                                     <span class="btn-text">Download CV</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
