--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                     Frameworks like React.js and React Native. I also enjoy ui, ux and design in general.
                 </p>
                 <div class="btn-con">
-                    <a href="https://docs.google.com/document/d/1dxJZuazprtqo4St1NRzEfs5RrpHv8qST/edit?usp=sharing&ouid=112001919012913141552&rtpof=true&sd=true"
+                    <a href="https://drive.google.com/file/d/1DaygfWCPJfuSBdqwbUP9OKovDpG269zD/view?usp=sharing"
                         class="main-btn">
-                        <span class="btn-text">Download CV</span>
+                        <span class="btn-text">Download Resume</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
                 </div>
