--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
                         software development Teams. If given a chance to work, I Assure you of my level best.
                     </p>
                     <div class="btn-con">
-                        <a href="#" class="main-btn">
-                            <span class="btn-text">Download CV</span>
+                        <a href="https://drive.google.com/file/d/1DaygfWCPJfuSBdqwbUP9OKovDpG269zD/view?usp=sharing" class="main-btn">
+                        
+                            <span class="btn-text">Download Resume</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
                     </div>
@@ -89,7 +90,7 @@
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">860K+</p>
+                            <p class="large-text">930K+</p>
                             <p class="small-text">Total <br /> Views @YashTheGeek</p>
                         </div>
                     </div>
@@ -476,7 +477,7 @@
                                     <span>Education</span>
                                 </div>
                                 <p>
-                                    <span>: Guru Nanak Institute of Technology</span>
+                                    <span>: Computer Science Graduate from GNIT</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -528,9 +529,9 @@
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                             </div>
                             <div class="submit-btn">
-                                <a href="https://docs.google.com/document/d/1dxJZuazprtqo4St1NRzEfs5RrpHv8qST/edit?usp=sharing&ouid=112001919012913141552&rtpof=true&sd=true"
+                                <a href="https://drive.google.com/file/d/1DaygfWCPJfuSBdqwbUP9OKovDpG269zD/view?usp=sharing"
                                     class="main-btn">
-                                    <span class="btn-text">Download CV</span>
+                                    <span class="btn-text">Download Resume</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a>
                             </div>
