--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                 </h1>
                 <p>
 
-                    I am Yash Raj vishwanath from India, and I do Content on Design & Development. I really Enjoy
+                    I am Yash Raj Vishwanath from India, and I do Content on Design & Development. I really Enjoy
                     Learning Languages and
-                    Frameworks like React.js and React Native. I also enjoy ui, ux and design in general.
+                    Frameworks like React.js and React Native. I also enjoy UI, UX, and design in general.
                 </p>
                 <div class="btn-con">
-                    <a href="https://drive.google.com/file/d/1DaygfWCPJfuSBdqwbUP9OKovDpG269zD/view?usp=sharing"
+                    <a href="https://drive.google.com/file/d/1SRDqRkz4SVWmsMcTJmp4HJDskgjAQOVT/view?usp=sharing"
                         class="main-btn">
                         <span class="btn-text">Download Resume</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
@@ -55,14 +55,13 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        I am a Computer Science student at GNIT, currently making my way through my pre-final year.
-
-                        Passionate about coding with Excellent problem solving skills and Ability to work Independently
+                        I am a Programmer Analyst Trainee at Cognizant.
+                        Passionate about coding with Excellent problem-solving skills and the Ability to work Independently
                         and collaboratively with
                         software development Teams. If given a chance to work, I Assure you of my level best.
                     </p>
                     <div class="btn-con">
-                        <a href="https://drive.google.com/file/d/1DaygfWCPJfuSBdqwbUP9OKovDpG269zD/view?usp=sharing" class="main-btn">
+                        <a href="https://drive.google.com/file/d/1SRDqRkz4SVWmsMcTJmp4HJDskgjAQOVT/view?usp=sharing" class="main-btn">
                         
                             <span class="btn-text">Download Resume</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
@@ -84,13 +83,13 @@
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">2000+</p>
-                            <p class="small-text">Happy <br /> Youtube - Subscribers</p>
+                            <p class="large-text">2050+</p>
+                            <p class="small-text">Youtube - Subscribers</p>
                         </div>
                     </div>
-                    <div class="about-item">
+                    <div class="about-item">6
                         <div class="abt-text">
-                            <p class="large-text">930K+</p>
+                            <p class="large-text">950K+</p>
                             <p class="small-text">Total <br /> Views @YashTheGeek</p>
                         </div>
                     </div>
@@ -176,7 +175,7 @@
                     <p class="tl-duration">Jan 2022 - Mar 2022 </p>
                     <h5>Cloud Computing @Microsoft Azure <span> - Verzeo</span></h5>
                     <p>
-                        Successfully completed Training cum Internship in Azure Cloud Computing under Verzeo Edutech and
+                        Completed Training cum Internship in Azure Cloud Computing under Verzeo Edutech and
                         IBM (Authorized
                         Education Partner).
                     </p>
@@ -205,9 +204,9 @@
                     <p class="tl-duration">Apr 2022 - Jun 2022</p>
                     <h5>Internshala Student Partner<span> - Internshala</span></h5>
                     <p>
-                        No work is small or big. Whatever you do and the efforts you put, make the work big or worthy of
+                        No work is small or big. Whatever you do and the efforts you put in, make the work big or worthy of
                         doing! As an
-                        Internshala Student Partner, I was given the tasks to create awareness among peers about amazing
+                        Internshala Student Partner, I was given the task of creating awareness among peers about amazing
                         internship and learning
                         opportunities provided by Internshala.
                     </p>
@@ -223,27 +222,25 @@
                         Embassador.
                     </p>
                 </div>
-                <div class="timeline-item">
+                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2016 - 2017</p>
-                    <h5>C++ Programmer<span> - Slime Tech</span></h5>
+                    <p class="tl-duration">DEC 2023 - Present</p>
+                    <h5>Programmer Analyst<span> - Cognizant</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                        DotNet Full Stack Engineer - In Angular.
                     </p>
-                </div>
-
-
-
+                </div>       
             </div>
         </section>
+        
         <section class="container" id="portfolio">
             <div class="main-title">
                 <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
             </div>
             <p class="port-text">
-                Here is some of my work that I've done in various programming languages.
+                Here is some of the work that I've done in various programming languages.
             </p>
             <div class="portfolios">
                 <div class="portfolio-item">
@@ -445,7 +442,7 @@
                             <br>
                             👯 I’m looking to collaborate with other content creators
                             <br>
-                            🥅 2022 Goals: Learn more about web3
+                            🥅 2024 Goals: Learn more about web3
                             <br>
                             📫 How to reach me: yashrajvishwanath@gmail.com
                             <br>
@@ -477,7 +474,7 @@
                                     <span>Education</span>
                                 </div>
                                 <p>
-                                    <span>: Computer Science Graduate from GNIT</span>
+                                    <span>: Computer Science Graduate from JNTU, Hyderabad.</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -529,7 +526,7 @@
                                 <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
                             </div>
                             <div class="submit-btn">
-                                <a href="https://drive.google.com/file/d/1DaygfWCPJfuSBdqwbUP9OKovDpG269zD/view?usp=sharing"
+                                <a href="https://drive.google.com/file/d/1SRDqRkz4SVWmsMcTJmp4HJDskgjAQOVT/view?usp=sharing"
                                     class="main-btn">
                                     <span class="btn-text">Download Resume</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
